# comfyui-webcam-node

./: README.md  __init__.py  pyproject.toml  server_extension.py  webcam_capture_node.py
js/: node.js
