[project]
name = "comfyui-webcam-node"
description = "ComfyUI Node that uses browser side code to access the webcam and display the video feed in a node."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/uetuluk/comfyui-webcam-node"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "uetuluk"
DisplayName = "comfyui-webcam-node"
Icon = "./workflow-example.png"
